updated login, register and dashboard UI

--- a/client/package.json
+++ b/client/package.json
@@ -6,10 +6,12 @@
     "axios": "^0.21.4",
     "classnames": "^2.2.6",
     "jwt-decode": "^2.2.0",
-    "react": "^16.6.3",
+    "materialize-social": "^1.0.3",
+    "react": "^16.14.0",
     "react-dom": "^16.6.3",
-    "react-redux": "^5.1.1",
-    "react-router-dom": "^4.3.1",
+    "react-redux": "^7.2.5",
+    "react-router": "^5.2.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
