--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "mongoose": "^5.3.11",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
+    "react-redux": "^7.2.5",
+    "react-toastr": "^3.0.0",
     "validator": "^10.9.0"
   }
 }
