--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "react-redux": "^7.2.5",
+    "react-toastify": "^8.0.3",
     "react-toastr": "^3.0.0",
     "validator": "^10.9.0"
   }
